--- a/LogicAssetManager/Base.lproj/MainMenu.xib
+++ b/LogicAssetManager/Base.lproj/MainMenu.xib
@@ -753,7 +753,7 @@
                                                 <rect key="frame" x="1" y="119" width="223" height="15"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
-                                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="37" horizontal="NO" id="Oi6-yt-rvd">
+                                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Oi6-yt-rvd">
                                                 <rect key="frame" x="224" y="17" width="15" height="102"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
@@ -761,6 +761,34 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="116" height="17"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </tableHeaderView>
+                                        </scrollView>
+                                        <scrollView autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="OV1-rM-Xfv">
+                                            <rect key="frame" x="128" y="17" width="331" height="278"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <clipView key="contentView" id="kbb-td-HYh">
+                                                <rect key="frame" x="1" y="1" width="329" height="276"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <collectionView id="9tU-bl-4UM">
+                                                        <rect key="frame" x="0.0" y="0.0" width="329" height="276"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                        <connections>
+                                                            <binding destination="fgo-zt-Eop" name="content" keyPath="arrangedObjects" id="eae-If-dHa"/>
+                                                            <binding destination="fgo-zt-Eop" name="selectionIndexes" keyPath="selectionIndexes" previousBinding="eae-If-dHa" id="wyt-6B-Osz"/>
+                                                            <outlet property="itemPrototype" destination="gPI-V8-8j4" id="7Fp-dh-iOZ"/>
+                                                        </connections>
+                                                    </collectionView>
+                                                </subviews>
+                                            </clipView>
+                                            <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="T4U-5G-r30">
+                                                <rect key="frame" x="1" y="144" width="233" height="15"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                            </scroller>
+                                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="eaA-Ts-oJR">
+                                                <rect key="frame" x="234" y="1" width="15" height="143"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                            </scroller>
                                         </scrollView>
                                     </subviews>
                                 </view>
@@ -773,11 +801,36 @@
         <customObject id="FqK-Cd-cJA" customClass="LAMIconManager">
             <connections>
                 <outlet property="groupsTableView" destination="RPy-qi-rnA" id="sS1-pY-xbi"/>
+                <outlet property="iconsView" destination="9tU-bl-4UM" id="HyO-Zt-W4R"/>
             </connections>
         </customObject>
         <arrayController id="Z0H-RM-ewo" userLabel="GroupsAC">
             <connections>
                 <binding destination="FqK-Cd-cJA" name="contentArray" keyPath="iconGroups" id="Q4e-ew-FWi"/>
+            </connections>
+        </arrayController>
+        <collectionViewItem id="gPI-V8-8j4">
+            <connections>
+                <outlet property="view" destination="nMX-af-fgu" id="tLl-49-sIa"/>
+            </connections>
+        </collectionViewItem>
+        <view id="nMX-af-fgu">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <subviews>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" id="nA8-Lx-pjs">
+                    <rect key="frame" x="8" y="8" width="86" height="86"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="nLy-sw-3aY"/>
+                    <connections>
+                        <binding destination="gPI-V8-8j4" name="value" keyPath="representedObject.image" id="izW-lV-226"/>
+                    </connections>
+                </imageView>
+            </subviews>
+        </view>
+        <arrayController id="fgo-zt-Eop" userLabel="IconsAC">
+            <connections>
+                <binding destination="FqK-Cd-cJA" name="contentArray" keyPath="allIcons" id="xLc-MF-Hd5"/>
             </connections>
         </arrayController>
     </objects>
